--- a/BloggoFrontend/index.html
+++ b/BloggoFrontend/index.html
@@ -1,10 +1,226 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Bloggo — Read. Write. Belong.</title>
+    <meta name="description" content="Bloggo is a membership‑driven blogging & social reading platform." />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Lora:wght@500;700&display=swap" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
+<header>
+    <div class="container nav">
+        <a class="brand" href="#" aria-label="Bloggo Home">
+            <img src="assets/blogg.png" alt="Bloggo Logo" class="brand-logo">
+        </a>
+        <nav class="nav-actions" aria-label="Primary">
+            <a class="btn" href="#explore">Explore</a>
+            <a class="btn" href="#pricing">Pricing</a>
+            <button class="btn" id="login-btn">Log in</button>
+            <button class="btn btn-primary" id="signup-btn">Start Writing</button>
+        </nav>
+    </div>
 
+</header>
+
+<main class="container">
+    <!-- HERO -->
+    <section class="hero" aria-labelledby="hero-title">
+        <div>
+            <div class="hero-card" role="note" aria-label="Membership highlight">
+                <svg width="22" height="22" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path d="M12 3l2.09 6.26H21l-5.17 3.76L16.91 21 12 17.77 7.09 21l1.08-7.98L3 9.26h6.91L12 3z" stroke="currentColor" stroke-width="1.5"/></svg>
+                <span><strong>Join writers you love.</strong> Members read ad‑free and earn from their stories.</span>
+            </div>
+            <div id="space"></div>
+            <h1 id="hero-title">Read deeply. Write boldly. Belong to the conversation.</h1>
+            <p>Bloggo is a membership‑driven platform where ideas meet readers. Start your first story in minutes, or follow topics you care about.</p>
+            <div class="hero-cta">
+                <button class="btn btn-primary" id="cta-start">Start Writing</button>
+                <button class="btn" id="cta-join">Join the Community</button>
+            </div>
+            <div style="margin-top:18px" class="auth-quick" aria-label="Quick sign in">
+                <!-- Google -->
+                <button class="oauth" id="google-auth">
+                    <img alt="Google" width="18" height="18" src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" />
+                    Continue with Google
+                </button>
+
+                <!-- Facebook -->
+                <button class="oauth" id="facebook-auth">
+                    <img alt="Facebook" width="18" height="18" src="https://www.svgrepo.com/show/475647/facebook-color.svg" />
+                    Continue with Facebook
+                </button>
+
+                <!-- LinkedIn -->
+                <button class="oauth" id="linkedin-auth">
+                    <img alt="LinkedIn" width="18" height="18" src="https://www.svgrepo.com/show/448234/linkedin.svg" />
+                    Continue with LinkedIn
+                </button>
+            </div>
+
+        </div>
+    </section>
+
+    <!-- TRENDING CAROUSEL -->
+    <section class="section" aria-labelledby="trending-title">
+        <h2 id="trending-title">Trending on Bloggo</h2>
+        <div class="carousel" id="carousel" aria-roledescription="carousel">
+            <div class="track" id="track">
+                <article class="slide" aria-label="Slide 1: Designing for Focus">
+                    <img src="https://images.unsplash.com/photo-1515879218367-8466d910aaa4?q=80&w=1600&auto=format&fit=crop" alt="Minimal workspace" />
+                    <div class="caption">
+                        <h3>Designing for Focus: Minimal UI that Amplifies Reading</h3>
+                        <p>UX · 8 min read · 12k reads</p>
+                    </div>
+                </article>
+                <article class="slide" aria-label="Slide 2: From Draft to Story">
+                    <img src="https://images.unsplash.com/photo-1516251193007-45ef944ab0c6?q=80&w=1600&auto=format&fit=crop" alt="Notebook and pen on desk" />
+                    <div class="caption">
+                        <h3>From Draft to Story: A Writer's Practical Workflow</h3>
+                        <p>Writing · 6 min read · 9.4k reads</p>
+                    </div>
+                </article>
+            </div>
+            <div class="ctrl" aria-hidden="false">
+                <button class="prev" aria-label="Previous slide" id="prev" title="Previous">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none"><path d="M15 19l-7-7 7-7" stroke="#0f172a" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+                </button>
+                <button class="next" aria-label="Next slide" id="next" title="Next">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none"><path d="M9 5l7 7-7 7" stroke="#0f172a" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+                </button>
+            </div>
+            <div class="dots" id="dots" aria-label="Slide indicators"></div>
+        </div>
+    </section>
+
+    <!-- CATEGORIES -->
+    <section class="section" aria-labelledby="categories-title" id="explore">
+        <h2 id="categories-title">Explore by Category</h2>
+        <div class="grid">
+            <article class="cat" tabindex="0">
+                <div class="cat-thumb"><img src="https://images.unsplash.com/photo-1518770660439-4636190af475?q=80&w=1200&auto=format&fit=crop" alt="Tech gadgets on a desk"></div>
+                <div class="cat-body">
+                    <span class="pill">Tech</span>
+                    <p style="margin:8px 0 0;color:var(--muted)">AI, Programming, Gadgets</p>
+                </div>
+            </article>
+            <article class="cat" tabindex="0">
+                <div class="cat-thumb"><img src="https://images.unsplash.com/photo-1478144592103-25e218a04891?q=80&w=1200&auto=format&fit=crop" alt="Travel road and mountains"></div>
+                <div class="cat-body">
+                    <span class="pill">Travel</span>
+                    <p style="margin:8px 0 0;color:var(--muted)">Guides, Stories, Tips</p>
+                </div>
+            </article>
+            <article class="cat" tabindex="0">
+                <div class="cat-thumb"><img src="https://images.unsplash.com/photo-1501621667575-af81f1f0bacc?q=80&w=1200&auto=format&fit=crop" alt="Healthy food bowl"></div>
+                <div class="cat-body">
+                    <span class="pill">Lifestyle</span>
+                    <p style="margin:8px 0 0;color:var(--muted)">Wellness, Habits, Minimalism</p>
+                </div>
+            </article>
+            <article class="cat" tabindex="0">
+                <div class="cat-thumb"><img src="https://images.unsplash.com/photo-1529078155058-5d716f45d604?q=80&w=1200&auto=format&fit=crop" alt="Books on a shelf"></div>
+                <div class="cat-body">
+                    <span class="pill">Books</span>
+                    <p style="margin:8px 0 0;color:var(--muted)">Reviews, Highlights, Notes</p>
+                </div>
+            </article>
+            <article class="cat" tabindex="0">
+                <div class="cat-thumb"><img src="https://images.unsplash.com/photo-1441984904996-e0b6ba687e04?q=80&w=1200&auto=format&fit=crop" alt="Fashion items on a table"></div>
+                <div class="cat-body">
+                    <span class="pill">Creative</span>
+                    <p style="margin:8px 0 0;color:var(--muted)">Design, Art, Photography</p>
+                </div>
+            </article>
+            <article class="cat" tabindex="0">
+                <div class="cat-thumb"><img src="https://images.unsplash.com/photo-1483721310020-03333e577078?q=80&w=1200&auto=format&fit=crop" alt="Coffee and code"></div>
+                <div class="cat-body">
+                    <span class="pill">Career</span>
+                    <p style="margin:8px 0 0;color:var(--muted)">Interviews, Growth, Remote</p>
+                </div>
+            </article>
+        </div>
+    </section>
+</main>
+
+<footer>
+    <div class="container" style="display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap">
+        <p>© <span id="year"></span> Bloggo. All rights reserved.</p>
+        <div style="display:flex;gap:12px">
+            <a href="#">Privacy</a>
+            <a href="#">Terms</a>
+            <a href="#">Contact</a>
+        </div>
+    </div>
+</footer>
+
+<script>
+    // Footer year
+    document.getElementById('year').textContent = new Date().getFullYear();
+
+    // Carousel logic
+    const track = document.getElementById('track');
+    const slides = Array.from(track.children);
+    const prevBtn = document.getElementById('prev');
+    const nextBtn = document.getElementById('next');
+    const dotsWrap = document.getElementById('dots');
+
+    let index = 0;
+    let timer = null;
+
+    // Build dots
+    slides.forEach((_, i) => {
+        const dot = document.createElement('button');
+        dot.className = 'dot';
+        dot.setAttribute('aria-label', `Go to slide ${i+1}`);
+        dot.addEventListener('click', () => goTo(i, true));
+        dotsWrap.appendChild(dot);
+    });
+
+    function update(){
+        const width = track.clientWidth;
+        track.style.transform = `translateX(-${index * width}px)`;
+        [...dotsWrap.children].forEach((d, i) => d.setAttribute('aria-current', i===index));
+    }
+
+    function goTo(i, user=false){
+        index = (i + slides.length) % slides.length;
+        update();
+        if(user){ resetAutoplay(); }
+    }
+
+    function next(){ goTo(index+1); }
+    function prev(){ goTo(index-1); }
+
+    nextBtn.addEventListener('click', () => next());
+    prevBtn.addEventListener('click', () => prev());
+
+    // Autoplay
+    function startAutoplay(){ timer = setInterval(next, 4000); }
+    function stopAutoplay(){ clearInterval(timer); }
+    function resetAutoplay(){ stopAutoplay(); startAutoplay(); }
+
+    const carousel = document.getElementById('carousel');
+    carousel.addEventListener('mouseenter', stopAutoplay);
+    carousel.addEventListener('mouseleave', startAutoplay);
+
+    window.addEventListener('resize', update);
+
+    // Init
+    goTo(0);
+    startAutoplay();
+
+    // Demo CTA clicks (replace with real routes)
+    document.getElementById('signup-btn').addEventListener('click', ()=>alert('Route to /signup'));
+    document.getElementById('login-btn').addEventListener('click', ()=>alert('Route to /login'));
+    document.getElementById('cta-start').addEventListener('click', ()=>alert('Route to /editor/new'));
+    document.getElementById('cta-join').addEventListener('click', ()=>alert('Route to /register'));
+    document.getElementById('google-auth').addEventListener('click', ()=>alert('Google OAuth'));
+    document.getElementById('facebook-auth').addEventListener('click', ()=>alert('Facebook OAuth'));
+    document.getElementById('linkedin-auth').addEventListener('click', ()=>alert('LinkedIn OAuth'));
+</script>
 </body>
 </html>
