fix: update login links to point to the correct signing page

--- a/BloggoFrontend/index.html
+++ b/BloggoFrontend/index.html
@@ -19,8 +19,8 @@
         <nav class="nav-actions" aria-label="Primary">
             <a class="btn" href="#explore">Explore</a>
             <a class="btn" href="#pricing">Pricing</a>
-            <button class="btn" id="login-btn">Log in</button>
-            <button class="btn btn-primary" id="signup-btn">Start Writing</button>
+            <a class="btn" id="login-btn" href="pages/signing.html">Log in</a>
+            <a class="btn btn-primary" id="signup-btn" href="pages/signup.html">Start Writing</a>
         </nav>
     </div>
 
