--- a/BloggoFrontend/pages/signup.html
+++ b/BloggoFrontend/pages/signup.html
@@ -20,7 +20,7 @@
             <img src="../assets/blogg.png" alt="Bloggo Logo" class="brand-logo">
         </a>
         <div>
-            <a href="signin.html" class="btn btn-outline-primary me-2">Log in</a>
+            <a href="signing.html" class="btn btn-outline-primary me-2">Log in</a>
             <a href="../index.html" class="btn btn-primary">Home</a>
         </div>
     </div>
@@ -100,7 +100,7 @@
         </div>
 
         <div class="login-link">
-            Already have an account? <a href="signin.html">Log in</a>
+            Already have an account? <a href="signing.html">Log in</a>
         </div>
     </div>
 </main>
