refactor: change passwordHash to password in DTOs and update authentication logic

--- a/BloggoFrontend/pages/signing.html
+++ b/BloggoFrontend/pages/signing.html
@@ -35,9 +35,9 @@
 
     <form id="signin-form">
       <div class="mb-3">
-        <label for="email" class="form-label">Email or Username</label>
-        <input type="text" class="form-control" id="email" name="emailOrUsername" required placeholder="Enter your email or username">
-        <div class="invalid-feedback">Please enter your email or username.</div>
+        <label for="username" class="form-label">Username</label>
+        <input type="text" class="form-control" id="username" name="username" required placeholder="Enter your username">
+        <div class="invalid-feedback">Please enter your username.</div>
       </div>
 
       <div class="mb-3">
