add dashboard and profile  layout with sidebar, feed, and right sidebar components

--- a/BloggoFrontend/pages/dashboard.html
+++ b/BloggoFrontend/pages/dashboard.html
@@ -13,13 +13,23 @@
         <a class="brand" href="#" aria-label="Bloggo Home">
             <img src="../assets/blogg.png" alt="Bloggo Logo" class="brand-logo">
         </a>
+
+        <!-- Navbar Actions -->
         <nav class="nav-actions">
             <a class="btn" href="#">Explore</a>
             <a class="btn" href="#">Notifications</a>
             <a class="btn btn-primary" href="#">Write</a>
+
+            <!-- User Profile (visible after login) -->
+            <div class="profile-menu">
+                <a href="profile-edit.html" title="Edit Profile">
+                    <img src="../assets/user-avatar.jpg" alt="User Avatar" class="avatar">
+                </a>
+            </div>
         </nav>
     </div>
 </header>
+
 
 <main class="container dashboard">
     <!-- Left Sidebar -->
