--- a/BloggoFrontend/pages/blog-editor.html
+++ b/BloggoFrontend/pages/blog-editor.html
@@ -7,135 +7,8 @@
 
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/blog-editor.css" rel="stylesheet">
 
-    <style>
-        :root {
-            --primary: #007BFF;
-            --primary-hover: #0069d9;
-            --border: #e6e6e6;
-            --text: #333;
-            --text-light: #666;
-            --background: #fafafa;
-            --white: #ffffff;
-            --gray-light: #f9f9f9;
-            --shadow: 0 2px 8px rgba(0, 0, 0, 0.12);
-        }
-
-        body {
-            background: var(--background);
-            color: var(--text);
-        }
-
-        header {
-            position: sticky;
-            top: 0;
-            z-index: 10;
-            background: rgba(255, 255, 255, 0.9);
-            backdrop-filter: saturate(180%) blur(12px);
-            border-bottom: 1px solid var(--border);
-        }
-
-        .brand-logo {
-            max-width: 200px;
-            max-height: 60px;
-            object-fit: contain;
-        }
-
-        .avatar {
-            width: 36px;
-            height: 36px;
-            border-radius: 50%;
-            object-fit: cover;
-        }
-
-        .editor-container {
-            background: var(--white);
-            border-radius: 12px;
-            box-shadow: var(--shadow);
-        }
-
-        .editor {
-            min-height: 400px;
-            padding: 1.5rem;
-            outline: none;
-        }
-
-        .editor:empty:before {
-            content: attr(placeholder);
-            color: #aaa;
-            font-style: italic;
-        }
-
-        .editor img {
-            max-width: 100%;
-            margin: 10px 0;
-            border-radius: 6px;
-        }
-
-        .editor.drop-zone-active:before {
-            content: '';
-            position: absolute;
-            inset: 1rem;
-            border: 2px dashed var(--primary);
-            border-radius: 8px;
-            background: rgba(0, 123, 255, 0.05);
-        }
-
-        .editor.drop-zone-active:after {
-            content: 'Drop image here';
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background: var(--primary);
-            color: white;
-            padding: 12px 20px;
-            border-radius: 6px;
-        }
-
-        .autosave {
-            font-size: 0.875rem;
-            color: var(--text-light);
-            padding: .75rem 1rem;
-            border-top: 1px solid var(--border);
-            background: var(--gray-light);
-        }
-
-        .autosave .indicator {
-            width: 10px;
-            height: 10px;
-            border-radius: 50%;
-            background: #28a745;
-            display: inline-block;
-        }
-
-        .autosave.saving .indicator {
-            background: #ffc107;
-        }
-
-        .btn{
-            padding:10px 16px;
-            border-radius:999px;
-            border:1px solid var(--border);
-            background:#fff;
-            color:var(--text);
-            font-weight:600;
-            transition:.2s;
-            cursor:pointer
-        }
-
-        .btn:hover{
-            transform:translateY(-1px);
-            box-shadow:var(--shadow);
-        }
-
-        #btn-publish{
-            background: var(--primary);
-            color: var(--white);
-            border-color: var(--primary);
-        }
-
-    </style>
 </head>
 <body>
 <header>
@@ -195,84 +68,7 @@
 
 <!-- Bootstrap JS Bundle -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="../js/blog-editor.js"></script>
 
-<script>
-    const editor = document.getElementById('editor');
-    const autosave = document.getElementById('autosave');
-    const titleInput = document.querySelector('.form-control');
-
-    function format(command, value = null) {
-        document.execCommand(command, false, value);
-        editor.focus();
-    }
-
-    function insertImage() {
-        const url = prompt('Enter image URL:');
-        if (url) format('insertImage', url);
-    }
-
-    let timeout;
-    function setSavingStatus() {
-        autosave.classList.add('saving');
-        autosave.querySelector('span:last-child').textContent = 'Saving...';
-        clearTimeout(timeout);
-        timeout = setTimeout(() => {
-            autosave.classList.remove('saving');
-            autosave.querySelector('span:last-child').textContent = 'All changes saved';
-        }, 1000);
-    }
-
-    editor.addEventListener('input', setSavingStatus);
-    titleInput.addEventListener('input', setSavingStatus);
-
-    editor.addEventListener('dragover', e => {
-        if (e.dataTransfer.types.includes('Files')) {
-            e.preventDefault();
-            editor.classList.add('drop-zone-active');
-        }
-    });
-    editor.addEventListener('dragleave', e => {
-        if (!editor.contains(e.relatedTarget)) editor.classList.remove('drop-zone-active');
-    });
-    editor.addEventListener('drop', e => {
-        e.preventDefault();
-        editor.classList.remove('drop-zone-active');
-        const files = e.dataTransfer.files;
-        Array.from(files).forEach(file => {
-            if (file.type.startsWith('image/')) {
-                const reader = new FileReader();
-                reader.onload = function(e) {
-                    const img = document.createElement('img');
-                    img.src = e.target.result;
-                    const selection = window.getSelection();
-                    if (selection.rangeCount) {
-                        const range = selection.getRangeAt(0);
-                        range.insertNode(img);
-                        const p = document.createElement('p');
-                        p.innerHTML = '<br>';
-                        img.parentNode.insertBefore(p, img.nextSibling);
-                        range.setStart(p, 0);
-                        range.collapse(true);
-                        selection.removeAllRanges();
-                        selection.addRange(range);
-                    } else {
-                        editor.appendChild(img);
-                    }
-                    setSavingStatus();
-                }
-                reader.readAsDataURL(file);
-            }
-        });
-    });
-
-    editor.addEventListener('paste', e => {
-        e.preventDefault();
-        const text = (e.clipboardData || window.clipboardData).getData('text/plain');
-        document.execCommand('insertText', false, text);
-        setSavingStatus();
-    });
-
-    window.onload = function() { editor.focus(); };
-</script>
 </body>
 </html>
