update button styles for signing and signup pages

--- a/BloggoFrontend/pages/signing.html
+++ b/BloggoFrontend/pages/signing.html
@@ -20,8 +20,8 @@
       <img src="../assets/blogg.png" alt="Bloggo Logo" class="brand-logo">
     </a>
     <div>
-      <a href="signup.html" class="btn btn-outline-primary me-2">Sign up</a>
-      <a href="../index.html" class="btn btn-primary">Home</a>
+      <a href="signup.html" class="btn">Sign up</a>
+      <a href="../index.html" class=" btn" id="btn-home">Home</a>
     </div>
   </div>
 </header>
