--- a/BloggoFrontend/pages/signup.html
+++ b/BloggoFrontend/pages/signup.html
@@ -20,8 +20,8 @@
             <img src="../assets/blogg.png" alt="Bloggo Logo" class="brand-logo">
         </a>
         <div>
-            <a href="signing.html" class="btn btn-outline-primary me-2">Log in</a>
-            <a href="../index.html" class="btn btn-primary">Home</a>
+            <a href="signing.html" class="btn ">Log in</a>
+            <a href="../index.html" class="btn " id="btn-home">Home</a>
         </div>
     </div>
 </header>
