update navigation links to point to correct pages and add notification page

--- a/BloggoFrontend/pages/blog-editor.html
+++ b/BloggoFrontend/pages/blog-editor.html
@@ -18,8 +18,8 @@
         </a>
 
         <nav class="d-flex align-items-center gap-2">
-            <a class="btn" href="#">Explore</a>
-            <a class="btn " href="#">Notifications</a>
+            <a class="btn" href="dashboard.html">Explore</a>
+            <a class="btn " href="notification.html">Notifications</a>
             <a id="btn-publish" class="btn" href="#">Publish</a>
             <div class="profile-menu">
                 <a href="profile-edit.html" title="Edit Profile">
