--- a/BloggoFrontend/pages/dashboard.html
+++ b/BloggoFrontend/pages/dashboard.html
@@ -34,11 +34,11 @@
 <main class="container dashboard">
     <!-- Left Sidebar -->
     <aside class="sidebar">
-        <a href="#">🏠 Home</a>
-        <a href="#">✍ My Blogs</a>
+        <a href="dashboard.html">🏠 Home</a>
+        <a href="profile.html">✍ My Blogs</a>
         <a href="#">🔖 Saved</a>
         <a href="#">🌍 Explore</a>
-        <a href="#">🔔 Notifications</a>
+        <a href="notification.html">🔔 Notifications</a>
         <a href="#">⚙ Settings</a>
     </aside>
 
