--- a/BloggoFrontend/pages/follow.html
+++ b/BloggoFrontend/pages/follow.html
@@ -18,8 +18,8 @@
 
         <!-- Navbar Actions -->
         <nav class="nav-actions">
-            <a class="btn" href="#">Explore</a>
-            <a class="btn" href="#">Notifications</a>
+            <a class="btn" href="dashboard.html">Explore</a>
+            <a class="btn" href="notification.html">Notifications</a>
             <a class="btn btn-primary" href="#">Write</a>
 
             <!-- User Profile (visible after login) -->
