--- a/BloggoFrontend/pages/notification.html
+++ b/BloggoFrontend/pages/notification.html
@@ -3,8 +3,141 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <title>Bloggo — Notification</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/main.css" rel="stylesheet">
+    <link href="../css/notification.css" rel="stylesheet">
 </head>
 <body>
+<header>
+    <div class="container nav">
+        <a class="brand" href="#" aria-label="Bloggo Home">
+            <img src="../assets/blogg.png" alt="Bloggo Logo" class="brand-logo">
+        </a>
+
+        <!-- Navbar Actions -->
+        <nav class="nav-actions">
+            <a class="btn" href="dashboard.html">Explore</a>
+            <a class="btn" href="notification.html">Notifications</a>
+            <a class="btn btn-primary" href="#">Write</a>
+
+            <!-- User Profile (visible after login) -->
+            <div class="profile-menu">
+                <a href="profile-edit.html" title="Edit Profile">
+                    <img src="../assets/user-avatar.jpg" class="avatar">
+                </a>
+            </div>
+        </nav>
+    </div>
+</header>
+
+<div class="container mt-3">
+    <div class="row mt-3">
+        <!-- Main Feed -->
+        <div class="col-lg-8">
+            <h2 class="mb-4">Notifications</h2>
+
+            <!-- Notification Tabs -->
+            <ul class="nav nav-tabs" id="notificationTabs" role="tablist">
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link active" id="all-tab" data-bs-toggle="tab" data-bs-target="#all" type="button" role="tab">
+                        All
+                    </button>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="mentions-tab" data-bs-toggle="tab" data-bs-target="#mentions" type="button" role="tab">
+                        Mentions
+                    </button>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="likes-tab" data-bs-toggle="tab" data-bs-target="#likes" type="button" role="tab">
+                        Likes
+                    </button>
+                </li>
+            </ul>
+
+            <div class="tab-content mt-3 d-flex justify-content-start" id="notificationTabsContent">
+                <div class="d-flex justify-content-start">
+                    <!-- All Tab -->
+                    <div class="tab-pane fade show active" id="all" role="tabpanel">
+                        <div class="card p-3 mb-2">
+                            <strong>@alex</strong> liked your post <em>"Spring Boot Guide"</em>.
+                            <small class="text-muted d-block">2h ago</small>
+                        </div>
+                        <div class="card p-3 mb-2">
+                            <strong>@susan</strong> mentioned you in a comment.
+                            <small class="text-muted d-block">5h ago</small>
+                        </div>
+                    </div>
+
+                    <!-- Mentions Tab -->
+                    <div class="tab-pane fade" id="mentions" role="tabpanel">
+                        <div class="card p-3 mb-2">
+                            <strong>@susan</strong> mentioned you: <em>"Check out @sasuniwijerathne’s blog!"</em>
+                            <small class="text-muted d-block">5h ago</small>
+                        </div>
+                    </div>
+
+                    <!-- Likes Tab -->
+                    <div class="tab-pane fade" id="likes" role="tabpanel">
+                        <div class="card p-3 mb-2">
+                            <strong>@alex</strong> liked your post <em>"Spring Boot Guide"</em>.
+                            <small class="text-muted d-block">2h ago</small>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <!-- Sidebar -->
+        <div class="col-lg-4">
+            <!-- Profile Card -->
+            <div class="card p-3 mb-3 text-center" id="edit-profile-card">
+                <img src="../assets/test.png" class="profile-avatar mb-2" alt="Avatar">
+
+                <div class="d-flex align-items-center justify-content-center gap-2 mb-2">
+                    <h4 class="profile-name m-0">Sasuniwijerathne</h4>
+                    <small class="text-muted">she/her</small>
+                </div>
+
+                <p>
+                    <a href="follow.html" class="text-decoration-none fw-semibold">71 Followers</a>
+                </p>
+
+                <p class="profile-bio">
+                    Just a 21+ girl navigating life with passion and purpose! ✨
+                </p>
+
+                <a href="../pages/profile-edit.html" class="btn btn-sm btn-outline-primary">
+                    Edit profile
+                </a>
+            </div>
+
+            <!-- Following List -->
+            <div class="card p-3 mb-3">
+                <h6 class="mb-3">Following</h6>
+                <ul class="list-unstyled following-list mb-0">
+                    <li class="d-flex align-items-center mb-2">
+                        <img src="https://via.placeholder.com/30" class="rounded-circle me-2" alt="">
+                        <span>test1</span>
+                    </li>
+                    <li class="d-flex align-items-center mb-2">
+                        <img src="https://via.placeholder.com/30" class="rounded-circle me-2" alt="">
+                        <span>test2</span>
+                    </li>
+                    <li class="d-flex align-items-center mb-2">
+                        <img src="https://via.placeholder.com/30" class="rounded-circle me-2" alt="">
+                        <span>test3</span>
+                    </li>
+                    <li>
+                        <a href="follow.html" class="text-decoration-none">See all (12)</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
