--- a/BloggoFrontend/pages/notification.html
+++ b/BloggoFrontend/pages/notification.html
@@ -2,10 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <title>Bloggo — Notification</title>
+    <title>Bloggo — Notifications</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../css/main.css" rel="stylesheet">
     <link href="../css/notification.css" rel="stylesheet">
 </head>
 <body>
@@ -21,25 +19,19 @@
             <a class="btn" href="notification.html">Notifications</a>
             <a class="btn btn-primary" href="#">Write</a>
 
-            <!-- User Profile (visible after login) -->
-            <div class="profile-menu">
-                <!-- User Profile (visible after login) -->
-                <div class="profile-menu">
-                    <!-- User Profile Menu -->
-                    <div class="dropdown profile-menu">
-                        <a href="#" class="d-block" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-                            <img src="../assets/boy%20(1).png" class="avatar" alt="Profile Avatar">
-                        </a>
-                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
-                            <li><a class="dropdown-item" href="profile.html">👤 Profile</a></li>
-                            <li><a class="dropdown-item" href="stories.html">✍️ Stories</a></li>
-                            <li><a class="dropdown-item" href="membership.html">⭐ Become a Member</a></li>
-                            <li><a class="dropdown-item" href="settings.html">⚙️ Settings</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item text-danger" href="logout.html">🚪 Logout</a></li>
-                        </ul>
-                    </div>
-                </div>
+            <!-- User Profile Menu -->
+            <div class="dropdown profile-menu">
+                <a href="#" class="d-block" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                    <img src="../assets/boy%20(1).png" class="avatar" alt="Profile Avatar">
+                </a>
+                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
+                    <li><a class="dropdown-item" href="profile.html">👤 Profile</a></li>
+                    <li><a class="dropdown-item" href="stories.html">✍️ Stories</a></li>
+                    <li><a class="dropdown-item" href="membership.html">⭐ Become a Member</a></li>
+                    <li><a class="dropdown-item" href="settings.html">⚙️ Settings</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item text-danger" href="logout.html">🚪 Logout</a></li>
+                </ul>
             </div>
         </nav>
     </div>
@@ -70,37 +62,35 @@
                 </li>
             </ul>
 
-            <div class="tab-content mt-3 d-flex justify-content-start" id="notificationTabsContent">
-                <div class="d-flex justify-content-start">
-                    <!-- All Tab -->
-                    <div class="tab-pane fade show active" id="all" role="tabpanel">
-                        <div class="card p-3 mb-2">
-                            <strong>@alex</strong> liked your post <em>"Spring Boot Guide"</em>.
-                            <small class="text-muted d-block">2h ago</small>
-                        </div>
-                        <div class="card p-3 mb-2">
-                            <strong>@susan</strong> mentioned you in a comment.
-                            <small class="text-muted d-block">5h ago</small>
-                        </div>
+            <!-- Tab Content -->
+            <div class="tab-content mt-3" id="notificationTabsContent">
+                <!-- All Tab -->
+                <div class="tab-pane fade show active" id="all" role="tabpanel">
+                    <div class="card p-3 mb-2">
+                        <strong>@alex</strong> liked your post <em>"Spring Boot Guide"</em>.
+                        <small class="text-muted d-block">2h ago</small>
                     </div>
-
-                    <!-- Mentions Tab -->
-                    <div class="tab-pane fade" id="mentions" role="tabpanel">
-                        <div class="card p-3 mb-2">
-                            <strong>@susan</strong> mentioned you: <em>"Check out @sasuniwijerathne’s blog!"</em>
-                            <small class="text-muted d-block">5h ago</small>
-                        </div>
-                    </div>
-
-                    <!-- Likes Tab -->
-                    <div class="tab-pane fade" id="likes" role="tabpanel">
-                        <div class="card p-3 mb-2">
-                            <strong>@alex</strong> liked your post <em>"Spring Boot Guide"</em>.
-                            <small class="text-muted d-block">2h ago</small>
-                        </div>
+                    <div class="card p-3 mb-2">
+                        <strong>@susan</strong> mentioned you in a comment.
+                        <small class="text-muted d-block">5h ago</small>
                     </div>
                 </div>
 
+                <!-- Mentions Tab -->
+                <div class="tab-pane fade" id="mentions" role="tabpanel">
+                    <div class="card p-3 mb-2">
+                        <strong>@susan</strong> mentioned you: <em>"Check out @sasuniwijerathne’s blog!"</em>
+                        <small class="text-muted d-block">5h ago</small>
+                    </div>
+                </div>
+
+                <!-- Likes Tab -->
+                <div class="tab-pane fade" id="likes" role="tabpanel">
+                    <div class="card p-3 mb-2">
+                        <strong>@alex</strong> liked your post <em>"Spring Boot Guide"</em>.
+                        <small class="text-muted d-block">2h ago</small>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -153,5 +143,6 @@
     </div>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
