implement dropdown menu for user notifications and dashboard

--- a/BloggoFrontend/pages/dashboard.html
+++ b/BloggoFrontend/pages/dashboard.html
@@ -21,7 +21,7 @@
         <nav class="nav-actions">
             <a class="btn" href="#">Explore</a>
             <a class="btn" href="notification.html">Notifications</a>
-            <a class="btn btn-primary" href="#">Write</a>
+            <a class="btn btn-primary" href="blog-editor.html">Write</a>
 
             <!-- ✅ Fixed: Single profile menu -->
             <div class="dropdown profile-menu">
