--- a/BloggoFrontend/pages/follow.html
+++ b/BloggoFrontend/pages/follow.html
@@ -20,7 +20,7 @@
         <nav class="nav-actions">
             <a class="btn" href="dashboard.html">Explore</a>
             <a class="btn" href="notification.html">Notifications</a>
-            <a class="btn btn-primary" href="#">Write</a>
+            <a class="btn btn-primary" href="blog-editor.html">Write</a>
 
             <!-- User Profile (visible after login) -->
             <div class="profile-menu">
