--- a/BloggoFrontend/pages/notification.html
+++ b/BloggoFrontend/pages/notification.html
@@ -17,7 +17,7 @@
         <nav class="nav-actions">
             <a class="btn" href="dashboard.html">Explore</a>
             <a class="btn" href="notification.html">Notifications</a>
-            <a class="btn btn-primary" href="#">Write</a>
+            <a class="btn btn-primary" href="blog-editor.html">Write</a>
 
             <!-- User Profile Menu -->
             <div class="dropdown profile-menu">
