--- a/BloggoFrontend/pages/saved-bookmarks.html
+++ b/BloggoFrontend/pages/saved-bookmarks.html
@@ -2,27 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Bloggo — Notifications</title>
+    <title>Saved-Bookmarks</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../css/notification.css" rel="stylesheet">
+    <link href="../css/bookmark.css" rel="stylesheet">
+
 </head>
 <body>
+
 <header>
     <div class="container nav">
-        <a class="brand" href="#" aria-label="Bloggo Home">
+        <a class="brand" href="dashboard.html" aria-label="Bloggo Home">
             <img src="../assets/blogg.png" alt="Bloggo Logo" class="brand-logo">
         </a>
 
-        <!-- Navbar Actions -->
-        <nav class="nav-actions">
-            <a class="btn" href="dashboard.html">Explore</a>
-            <a class="btn" href="notification.html">Notifications</a>
-            <a class="btn btn-primary" href="blog-editor.html">Write</a>
+        <!-- 🔍 Search Bar -->
+        <form class="d-flex mx-3 flex-grow-1" role="search" onsubmit="return false;">
+            <input class="form-control me-2" type="search" id="searchInput" placeholder="Search blogs, tags, or authors..." aria-label="Search">
+            <button class="btn btn-outline-success" type="button" onclick="searchBlogs()">Search</button>
+        </form>
 
-            <!-- User Profile Menu -->
+        <nav class="nav-actions">
+            <a class="btn" href="#">Explore</a>
+            <a class="btn" href="notification.html">Notifications</a>
+            <a class="btn " id="btn-publish" href="blog-editor.html">Write</a>
+
+            <!-- ✅ Profile dropdown -->
             <div class="dropdown profile-menu">
                 <a href="#" class="d-block" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src="../assets/boy%20(1).png" class="avatar" alt="Profile Avatar">
+                    <img src="../assets/boy%20(1).png" class="avatar" alt="User Profile">
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
                     <li><a class="dropdown-item" href="profile.html">👤 Profile</a></li>
@@ -41,7 +48,26 @@
     <div class="row mt-3">
         <!-- Main Feed -->
         <div class="col-lg-8">
-            <h2 class="mb-4">Bookmarks</h2>
+            <h2 class="mb-4">Notifications</h2>
+
+            <!-- Notification Tabs -->
+            <ul class="nav nav-tabs" id="notificationTabs" role="tablist">
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link active" id="all-tab" data-bs-toggle="tab" data-bs-target="#all" type="button" role="tab">
+                        All
+                    </button>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="mentions-tab" data-bs-toggle="tab" data-bs-target="#mentions" type="button" role="tab">
+                        Mentions
+                    </button>
+                </li>
+                <li class="nav-item" role="presentation">
+                    <button class="nav-link" id="likes-tab" data-bs-toggle="tab" data-bs-target="#likes" type="button" role="tab">
+                        Likes
+                    </button>
+                </li>
+            </ul>
 
             <!-- Tab Content -->
             <div class="tab-content mt-3" id="notificationTabsContent">
@@ -123,7 +149,5 @@
         </div>
     </div>
 </div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
