Added logout confirmation page and updated styles.

--- a/BloggoFrontend/pages/blog-editor.html
+++ b/BloggoFrontend/pages/blog-editor.html
@@ -13,7 +13,7 @@
 <body>
 <header>
     <div class="container d-flex justify-content-between align-items-center py-2">
-        <a class="brand" href="#" aria-label="Bloggo Home">
+        <a class="brand" href="about-bloggo.html" aria-label="Bloggo Home">
             <img src="../assets/blogg.png" alt="Bloggo Logo" class="brand-logo">
         </a>
 
