--- a/BloggoFrontend/pages/dashboard.html
+++ b/BloggoFrontend/pages/dashboard.html
@@ -25,7 +25,7 @@
         </form>
 
         <nav class="nav-actions">
-            <a class="btn" href="#">Explore</a>
+            <a class="btn" href="about-bloggo.html">Explore</a>
             <a class="btn" href="notification.html">Notifications</a>
             <a class="btn btn-primary" href="blog-editor.html">Write</a>
 
@@ -53,8 +53,8 @@
     <aside class="sidebar">
         <a href="dashboard.html">🏠 Home</a>
         <a href="profile.html">✍ My Blogs</a>
-        <a href="#">🔖 Saved</a>
-        <a href="#">🌍 Explore</a>
+        <a href="saved-bookmarks.html">🔖 Saved</a>
+        <a href="about-bloggo.html">🌍 Explore</a>
         <a href="notification.html">🔔 Notifications</a>
         <a href="settings.html">⚙ Settings</a>
     </aside>
