--- a/BloggoFrontend/pages/follow.html
+++ b/BloggoFrontend/pages/follow.html
@@ -12,7 +12,7 @@
 
 <header>
     <div class="container nav">
-        <a class="brand" href="#" aria-label="Bloggo Home">
+        <a class="brand" href="about-bloggo.html" aria-label="Bloggo Home">
             <img src="../assets/blogg.png" alt="Bloggo Logo" class="brand-logo">
         </a>
 
@@ -111,7 +111,7 @@
                     <li class="d-flex align-items-center mb-2"><img src="https://via.placeholder.com/30" alt=""> test1</li>
                     <li class="d-flex align-items-center mb-2"><img src="https://via.placeholder.com/30" alt=""> test2</li>
                     <li class="d-flex align-items-center mb-2"><img src="https://via.placeholder.com/30" alt=""> test3 </li>
-                    <li><a href="#">See all (12)</a></li>
+                    <li><a href="follow.html">See all (12)</a></li>
                 </ul>
             </div>
         </div>
