--- a/BloggoFrontend/pages/membership.html
+++ b/BloggoFrontend/pages/membership.html
@@ -11,7 +11,7 @@
 <!-- Navbar -->
 <header>
     <div class="container nav">
-        <a class="brand" href="#" aria-label="Bloggo Home">
+        <a class="brand" href="about-bloggo.html" aria-label="Bloggo Home">
             <img src="../assets/blogg.png" alt="Bloggo Logo" class="brand-logo">
         </a>
 
