--- a/BloggoFrontend/pages/admin-action.html
+++ b/BloggoFrontend/pages/admin-action.html
@@ -9,7 +9,7 @@
 <body>
 <header>
     <div class="container d-flex justify-content-between align-items-center py-2">
-        <a class="brand" href="#" aria-label="Bloggo Home">
+        <a class="brand" href="about-bloggo.html" aria-label="Bloggo Home">
             <img src="../assets/blogg.png" alt="Bloggo Logo" class="brand-logo">
         </a>
 
@@ -32,16 +32,16 @@
                         <a class="nav-link active" href="#">📊 Dashboard</a>
                     </li>
                     <li class="nav-item mb-2">
-                        <a class="nav-link" href="#">👤 Manage Users</a>
+                        <a class="nav-link" href="user-management.html">👤 Manage Users</a>
                     </li>
                     <li class="nav-item mb-2">
-                        <a class="nav-link" href="#">📝 Manage Posts</a>
+                        <a class="nav-link" href="post-management.html">📝 Manage Posts</a>
                     </li>
                     <li class="nav-item mb-2">
-                        <a class="nav-link" href="#">⚡ Admin Actions</a>
+                        <a class="nav-link" href="user-management.html">⚡ Admin Actions</a>
                     </li>
                     <li class="nav-item mb-2">
-                        <a class="nav-link" href="#">⚙️ Settings</a>
+                        <a class="nav-link" href="settings.html">⚙️ Settings</a>
                     </li>
                 </ul>
             </div>
@@ -89,11 +89,11 @@
                             <small class="text-muted float-end">2h ago</small>
                         </li>
                         <li class="list-group-item">
-                            Admin <strong>@pookie</strong> deleted post <em>"Spring Boot Guide"</em>
+                            Admin <strong>@minuki</strong> deleted post <em>"Spring Boot Guide"</em>
                             <small class="text-muted float-end">4h ago</small>
                         </li>
                         <li class="list-group-item">
-                            Admin <strong>@oshan</strong> warned user <strong>@susan</strong> — Reason: Offensive comment
+                            Admin <strong>@chanuli</strong> warned user <strong>@susan</strong> — Reason: Offensive comment
                             <small class="text-muted float-end">6h ago</small>
                         </li>
                     </ul>
@@ -150,15 +150,6 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-    // Example: confirm before banning a user
-    document.querySelectorAll('.btn-danger').forEach(btn => {
-        btn.addEventListener('click', function () {
-            if (!confirm("Are you sure you want to ban this user?")) {
-                event.preventDefault();
-            }
-        });
-    });
-</script>
+<script src="../js/admin-action.js"></script>
 </body>
 </html>
