--- a/BloggoFrontend/pages/dashboard.html
+++ b/BloggoFrontend/pages/dashboard.html
@@ -14,7 +14,7 @@
 <body>
 <header>
     <div class="container nav">
-        <a class="brand" href="dashboard.html" aria-label="Bloggo Home">
+        <a class="brand" href="about-bloggo.html" aria-label="Bloggo Home">
             <img src="../assets/blogg.png" alt="Bloggo Logo" class="brand-logo">
         </a>
 
