Added user-specific story listing functionality.

--- a/BloggoFrontend/pages/notification.html
+++ b/BloggoFrontend/pages/notification.html
@@ -46,40 +46,20 @@
             <!-- Tab Content -->
             <div class="tab-content mt-3" id="notificationTabsContent">
                 <!-- All Tab -->
-                <div class="tab-pane fade show active" id="all" role="tabpanel">
-                    <div class="card p-3 mb-2">
-                        <strong>@alex</strong> liked your post <em>"Spring Boot Guide"</em>.
-                        <small class="text-muted d-block">2h ago</small>
-                    </div>
-                    <div class="card p-3 mb-2">
-                        <strong>@susan</strong> mentioned you in a comment.
-                        <small class="text-muted d-block">5h ago</small>
-                    </div>
-                </div>
+                <div class="tab-pane fade show active" id="all" role="tabpanel"></div>
 
                 <!-- Mentions Tab -->
-                <div class="tab-pane fade" id="mentions" role="tabpanel">
-                    <div class="card p-3 mb-2">
-                        <strong>@susan</strong> mentioned you: <em>"Check out @sasuniwijerathne’s blog!"</em>
-                        <small class="text-muted d-block">5h ago</small>
-                    </div>
-                </div>
+                <div class="tab-pane fade" id="mentions" role="tabpanel"></div>
 
                 <!-- Likes Tab -->
-                <div class="tab-pane fade" id="likes" role="tabpanel">
-                    <div class="card p-3 mb-2">
-                        <strong>@alex</strong> liked your post <em>"Spring Boot Guide"</em>.
-                        <small class="text-muted d-block">2h ago</small>
-                    </div>
-                </div>
+                <div class="tab-pane fade" id="likes" role="tabpanel"></div>
             </div>
         </div>
 
-        <!-- Sidebar -->
         <div class="col-lg-4">
             <!-- Profile Card -->
             <div class="card p-3 mb-3 text-center" id="edit-profile-card">
-                <img src="../assets/test.png" class="profile-avatar mb-2" alt="Avatar">
+                <img  class="profile-avatar mb-2" alt="Avatar">
 
                 <div class="d-flex align-items-center justify-content-center gap-2 mb-2">
                     <h4 class="profile-name m-0">Sasuniwijerathne</h4>
@@ -104,15 +84,15 @@
                 <h6 class="mb-3">Following</h6>
                 <ul class="list-unstyled following-list mb-0">
                     <li class="d-flex align-items-center mb-2">
-                        <img src="https://via.placeholder.com/30" class="rounded-circle me-2" alt="">
+                        <img  class="rounded-circle me-2" alt="">
                         <span>test1</span>
                     </li>
                     <li class="d-flex align-items-center mb-2">
-                        <img src="https://via.placeholder.com/30" class="rounded-circle me-2" alt="">
+                        <img  class="rounded-circle me-2" alt="">
                         <span>test2</span>
                     </li>
                     <li class="d-flex align-items-center mb-2">
-                        <img src="https://via.placeholder.com/30" class="rounded-circle me-2" alt="">
+                        <img  class="rounded-circle me-2" alt="">
                         <span>test3</span>
                     </li>
                     <li>
