--- a/BloggoFrontend/pages/saved-bookmarks.html
+++ b/BloggoFrontend/pages/saved-bookmarks.html
@@ -48,25 +48,13 @@
     <div class="row mt-3">
         <!-- Main Feed -->
         <div class="col-lg-8">
-            <h2 class="mb-4">Notifications</h2>
+            <h2 class="mb-4">My Library</h2>
 
             <!-- Notification Tabs -->
             <ul class="nav nav-tabs" id="notificationTabs" role="tablist">
-                <li class="nav-item" role="presentation">
-                    <button class="nav-link active" id="all-tab" data-bs-toggle="tab" data-bs-target="#all" type="button" role="tab">
-                        All
-                    </button>
-                </li>
-                <li class="nav-item" role="presentation">
-                    <button class="nav-link" id="mentions-tab" data-bs-toggle="tab" data-bs-target="#mentions" type="button" role="tab">
-                        Mentions
-                    </button>
-                </li>
-                <li class="nav-item" role="presentation">
-                    <button class="nav-link" id="likes-tab" data-bs-toggle="tab" data-bs-target="#likes" type="button" role="tab">
-                        Likes
-                    </button>
-                </li>
+                <li class="nav-item" role="presentation"></li>
+                <li class="nav-item" role="presentation"></li>
+                <li class="nav-item" role="presentation"></li>
             </ul>
 
             <!-- Tab Content -->
@@ -101,15 +89,13 @@
             </div>
         </div>
 
-        <!-- Sidebar -->
         <div class="col-lg-4">
             <!-- Profile Card -->
             <div class="card p-3 mb-3 text-center" id="edit-profile-card">
-                <img src="../assets/test.png" class="profile-avatar mb-2" alt="Avatar">
+                <img  class="profile-avatar mb-2" alt="Avatar">
 
                 <div class="d-flex align-items-center justify-content-center gap-2 mb-2">
                     <h4 class="profile-name m-0">Sasuniwijerathne</h4>
-
                     <small class="text-muted">she/her</small>
                 </div>
 
@@ -131,15 +117,15 @@
                 <h6 class="mb-3">Following</h6>
                 <ul class="list-unstyled following-list mb-0">
                     <li class="d-flex align-items-center mb-2">
-                        <img src="https://via.placeholder.com/30" class="rounded-circle me-2" alt="">
+                        <img  class="rounded-circle me-2" alt="">
                         <span>test1</span>
                     </li>
                     <li class="d-flex align-items-center mb-2">
-                        <img src="https://via.placeholder.com/30" class="rounded-circle me-2" alt="">
+                        <img  class="rounded-circle me-2" alt="">
                         <span>test2</span>
                     </li>
                     <li class="d-flex align-items-center mb-2">
-                        <img src="https://via.placeholder.com/30" class="rounded-circle me-2" alt="">
+                        <img  class="rounded-circle me-2" alt="">
                         <span>test3</span>
                     </li>
                     <li>
