--- a/BloggoFrontend/pages/follow.html
+++ b/BloggoFrontend/pages/follow.html
@@ -51,6 +51,8 @@
     <div class="row mt-3">
         <!-- Main Feed -->
         <div class="col-lg-8">
+            <h2 class="mb-4">Audience</h2>
+
             <!-- User Info Tabs -->
             <ul class="nav nav-tabs" id="profileTabs" role="tablist">
                 <li class="nav-item" role="presentation">
