--- a/BloggoFrontend/pages/stories.html
+++ b/BloggoFrontend/pages/stories.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>My Stories</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="../css/stories.css" rel="stylesheet">
 </head>
@@ -44,7 +44,7 @@
             <h2 class="mb-4">My Stories</h2>
 
             <!-- Tab Content -->
-            <div class="tab-content mt-3" id="myStories">
+            <div class="nav nav-tabs" id="myStories">
                 <div class="tab-pane fade show active" id="draft" role="tabpanel"></div>
                 <div class="tab-pane fade" id="published" role="tabpanel"></div>
                 <div class="tab-pane fade" id="archived" role="tabpanel"></div>
